1. Метод .of [#360796]