@@ -1,7 +1,6 @@
 package ru.job4j.collection.department;
 
 import org.junit.Test;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.*;
@@ -10,29 +9,29 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenAscendingSorting() {
-        List<String> input = Arrays.asList("k2/sk3/ssk1", "k2", "k1", "k2/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k2/sk3/ssk1", "k2", "k1", "k2/sk1", "k1/sk1/ssk1");
         Departments.sortAsc(Departments.fillGaps(input));
     }
 
     @Test
     public void whenDescendingSorting() {
-        List<String> input = Arrays.asList("k2/sk3/ssk1", "k2", "k1", "k2/sk1", "k1/sk1/ssk1");
+        List<String> input = List.of("k2/sk3/ssk1", "k2", "k1", "k2/sk1", "k1/sk1/ssk1");
         Departments.sortDesc(Departments.fillGaps(input));
     }
 
